# queue-blitz

./: CMakeLists.txt  main.cpp  task1.2.txt  task1.3.txt  task2.1.txt  task2.2.txt  task2.3.txt
task1/: atomic_executor.h  blocking_executor.h  mutex_executor.h
task2/: AtomicQueue.cpp  AtomicQueue.h  ConditionalQueue.cpp  ConditionalQueue.h  MutexQueue.cpp  MutexQueue.h  Queue.h
